--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,28 +55,28 @@
             <a class="works-item" href="works-2.html">
               <div class="works-img"><img src="img/works/html2.png" alt="html2" /></div>
               <p class="works-name">プロフィールサイト</p>
-              <p class="works-info">HTML/CSS</p>
+              <p class="works-info">HTML/CSS/jQuery</p>
             </a>
-            <a class="works-item" href="works-3.html">
+            <!-- <a class="works-item" href="works-3.html">
               <div class="works-img"><img src="img/works/wordpress1.png" alt="WordPress" /></div>
               <p class="works-name">美容室のHP</p>
               <p class="works-info">WordPress</p>
-            </a>
+            </a> -->
             <a class="works-item" href="works-4.html">
-              <div class="works-img"><img src="img/works/photoshop.png" alt="Photoshop" /></div>
-              <p class="works-name">ITスクールのバナー</p>
-              <p class="works-info">Photoshop</p>
+              <div class="works-img"><img src="img/works/11887.png" alt="Photoshop" /></div>
+              <p class="works-name">ITセミナーのバナー</p>
+              <p class="works-info">Figma</p>
             </a>
             <a class="works-item" href="works-5.html">
-              <div class="works-img"><img src="img/works/xd.png" alt="AdobeXD" /></div>
-              <p class="works-name">ITスクールのLP</p>
-              <p class="works-info">AdobeXD</p>
+              <div class="works-img"><img src="img/works/11887 9.png" alt="AdobeXD" /></div>
+              <p class="works-name">ITセミナーのバナー</p>
+              <p class="works-info">Figma</p>
             </a>
-            <a class="works-item" href="works-6.html">
+            <!-- <a class="works-item" href="works-6.html">
               <div class="works-img"><img src="img/works/wordpress2.png" alt="WordPress2" /></div>
               <p class="works-name">大学のHP</p>
               <p class="works-info">WordPress/PHP</p>
-            </a>
+            </a> -->
           </div>
         </div>
       </section>
@@ -92,7 +92,7 @@
               <div class="skill-body">
                 <h3 class="skill-name">HTML/CSS</h3>
                 <p class="skill-text">
-                  スマホで見ても表示崩れのないレスポンシブ対応も可能です。</p>
+                  あらゆる画面サイズに対応した、レスポンシブデザインを実現します。</p>
               </div>
             </div>
             <div class="skill-item">
@@ -100,7 +100,7 @@
               <div class="skill-body">
                 <h3 class="skill-name">WordPress</h3>
                 <p class="skill-text">
-                  WordPress製の店舗HP・企業HP・メディアサイトなど、Webサイトを0から構築することが可能です。</p>
+                  WordPressを使って、オリジナルのWebサイトを作成します。テーマやプラグインを活用し、見やすく使いやすいサイトを実現します。</p>
               </div>
             </div>
             <div class="skill-item">
@@ -108,7 +108,7 @@
               <div class="skill-body">
                 <h3 class="skill-name">JavaScript</h3>
                 <p class="skill-text">
-                  お問い合わせフォームや自動スクロールなど動きのあるWebサイトを作る事が可能です。</p>
+                  JavaScriptを活用し、ユーザー体験を大切にしたインタラクションやアニメーションを取り入れ、使いやすいWebサイトを実現します。</p>
               </div>
             </div>
             <div class="skill-item">
@@ -128,9 +128,9 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/skills/xd.png" alt="adobexd"></p>
+              <p class="skill-img"><img src="img/skills/figma.png" alt="adobexd"></p>
               <div class="skill-body">
-                <h3 class="skill-name">Adobe XD</h3>
+                <h3 class="skill-name">Figma</h3>
                 <p class="skill-text">
                   Webサイトのデザインやワイヤーフレームを作ることが可能です。</p>
               </div>
@@ -146,14 +146,17 @@
           <h2 class="title">ABOUT</h2>
           <div class="profile">
             <p class="profile-img">
-              <img src="img/about.png" alt="about">
+              <img src="img/SHUNTA.jpg" alt="about">
             </p>
             <div class="profile-body">
               <p>
-                侍太郎
+                伊藤 駿汰
               </p>
               <p>
-                東京都在住。フリーランスとしてWeb制作をしております。2014年より5年間医療業界で営業職として務めておりました。予てより趣味でしていたWebサイト制作を2020年より本業にしました。Web制作におけるデザイン、コーディング、スマートフォンサイト対応、WordPressなどが得意分野です。低予算でWebサイトをお作りしますので、お気軽にお問い合わせください。
+                岡山県在住。フリーランスとしてWeb制作をしております。2017年から8年間、ジーンズのレーザー加工オペレーターとして務めておりました。
+                以前より関心のあったWebサイト制作を2024年から学習し、IT業界への転職を目指しております。Web制作では、デザインや
+                コーディングはもちろん、スマートフォン対応やWordPressのカスタマイズも得意です。デザインを通じて、見る人の心に温かさを届けられるデザイナーを目標にしています！
+                お手頃な価格で心を込めて、温かい雰囲気のWebサイトをお作りします。どんなご要望でも、お気軽にご相談ください。お手伝いできることを楽しみにしています。
               </p>
               
             </div>
@@ -170,11 +173,11 @@
             お問い合わせは、<br class="sp-only">メールまたはSNSにてお願いいたします。
           </p>
           <div class="contact-list">
-            <a href="http://instagram.com/" target="_blank">
-              <img src="img/icon_instagram.gif" alt="Instagram">
+            <a href="mailto:jarvismark8_29@outlook.jp" target="_blank">
+              <img src="img/icon_mail.png" alt="Instagram">
             </a>
-            <a href="http://facebook.com/" target="_blank">
-              <img src="img/icon_facebook.gif" alt="Facebook">
+            <a href="https://x.com/1sAr0N06iCSNYtF" target="_blank">
+              <img src="img/icon_x.png" alt="Facebook">
             </a>
           </div>
         </div>
